--- a/Book_recommendation_sysytem_unsupervised.ipynb
+++ b/Book_recommendation_sysytem_unsupervised.ipynb
@@ -7985,7 +7985,7 @@
         "id": "8BZR1fiNLmp-"
       },
       "source": [
-        "#### **Collabrative Filtering Using Cosine Similarity**"
+        "#### **Collabrative Filtering Using Cosine Similarity (User-User)**"
       ]
     },
     {
